examples/test/testpolicy12794.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12794
  namespace: namespace249
spec:
  podSelector:
    matchLabels:
      key26: value11
      key24: value24
      key40: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value43
          key39: value36
          key25: value28
